--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,3 @@
-
 {
   "hosting": {
     "source": ".",
@@ -9,7 +8,8 @@
     ],
     "frameworksBackend": {
       "region": "us-central1",
-      "maxInstances": 10
+      "maxInstances": 10,
+      "memory": "512MiB"
     }
   }
 }
