--- a/firebase.json
+++ b/firebase.json
@@ -1,3 +1,4 @@
+
 {
   "hosting": {
     "source": ".",
@@ -8,8 +9,7 @@
     ],
     "frameworksBackend": {
       "region": "us-central1",
-      "maxInstances": 10,
-      "memory": "512MiB"
+      "maxInstances": 10
     }
   }
 }
